--- a/src/App.css
+++ b/src/App.css
@@ -201,8 +201,24 @@ button:disabled {
 
 .home {
 	position: fixed;
+	width: auto;
     top: 10px;
-    left: 10px
+	left: 10px;
+	display: inline-block;
+ 	padding: 6px 20px;
+  	cursor: pointer;
+	border: 1px solid #bbb;
+	border-radius: 10px;
+  	overflow: visible;
+  	font: bold 13px arial, helvetica, sans-serif;
+  	text-decoration: none;
+  	white-space: nowrap;
+	color: rgb(0, 0, 0);
+	background-color: rgb(110, 110, 110);  
+}
+
+.home:hover {
+	background-color: rgb(173, 173, 173);
 }
 
 /* -------------------------
