--- a/src/App.css
+++ b/src/App.css
@@ -228,8 +228,8 @@ button:disabled {
 .report-problem {
 	width: auto;
 	position: fixed;
-    bottom: 0;
-    left: 0;
+    top: 0;
+    right: 0;
     border-radius:12px 0 12px 0;
 	background: #292929;
 	border:none;
@@ -237,8 +237,8 @@ button:disabled {
     font-size: 10px;
     font-weight: bold;
     padding:6px 5px 6px 5px;
-    margin-left: 3px;
-    margin-bottom: 4px;
+    margin-right: 6px;
+    margin-top: 8px;
     text-decoration: none;
 }
 .report-problem:hover {
@@ -249,4 +249,12 @@ button:disabled {
 .report-problem:active {
     box-shadow: 1px 1px 10px rgb(255, 0, 0) inset, 0 1px 0 rgba(255, 0, 0, 0); 
     outline-style:none;
+}
+
+/* -------------------------
+	Border
+------------------------- */
+
+.border {
+	margin: 15px;
 }
